# PythonServerMcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  INTERFACE_PLAN.md  Makefile  README.md  TODO.md  install.sh  main.py  pyproject.toml  server.py  start.sh  test_mcp.py
assets/: coinmarketcap-docs.txt
hooks/: commit-msg
src/: __init__.py  mcp_server.py  server.py
src/core/: config.py
src/core/common/: crypto_schema.py  schema.py
src/core/settings/: __init__.py  base.py  development.py  environment.py  local.py  production.py  staging.py
src/core/utils/: datetime.py  extended_enum.py  filename_generator.py  passwords.py  query_utils.py  redis.py
src/resources/: __init__.py  coinmarketcap_resource.py
src/services/: __init__.py  coinmarketcap_service.py
src/tools/: __init__.py  prices.py
