[project]
name = "python-server-mcp"
version = "0.1.0"
description = "Python server for MCP bootstrap"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "black>=25.1.0",
    "decouple>=0.0.7",
    "httpx>=0.28.1",
    "icecream>=2.1.4",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "python-coinmarketcap>=0.6",
]
[tool.black]
line-length = 130
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
